objects/ssot__MaterialityTopicDocClauseSet__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DocumentClauseSetId__c</fullName>
        <label>Document Clause Set</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Materiality Topic Doc Clause Set Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MaterialityTopicId__c</fullName>
        <label>Materiality Topic</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658747521_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MaterialityTopicDocClauseSet_Documen_rel</label>
        <referenceTo>ssot__DocumentClauseSet__dlm</referenceTo>
        <relationshipLabel>MaterialityTopicDocClauseSet_Documen_rel</relationshipLabel>
        <relationshipName>rel_1731658747521_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731659052124_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MaterialityTopicDocClauseSet_Materia_rel</label>
        <referenceTo>ssot__MaterialityTopic__dlm</referenceTo>
        <relationshipLabel>MaterialityTopicDocClauseSet_Materia_rel</relationshipLabel>
        <relationshipName>rel_1731659052124_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>